# bacteria

./: .anjuta_sym_db.db  .gitignore  .travis.yml  COPYING  README  README.md  config.h  config.h.in  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
libbacteria/: Makefile.am  json_rpc.c  macros.h
libbacteria/assets/: base64.c  bignum.c  captcha.c  gmp.c  images.c  images.h  main.c  privkey.ed25519  privkey.rsa  rsa_ed25519.c
libbacteria/encdec/: base64.h  rsa_ed25519.h
libbacteria/encdec/async/: x25519.c
libbacteria/encdec/verify/: base64.c  rsa_ed25519.c
libbacteria/images/: images.c  images.h
libbacteria/lua/: afirst.c  libcrypto.c  libcrypto.h  libed25519rsa.c  libed25519rsa.h  libgmp.c  libgmp.h  libimages.c  libimages.h  libjson.c  lua.h  luacxx.h  luaserv.c  luaserv.h
src/: .gitignore  Makefile.am  async_serv.h  bacteria  ed25519.privkey  main.c  rsa.privkey  stdout.txt
src/assets/protocol_bacteria/: idea.txt
src/bootstrap/: Makefile.am  events.h  main.c  main.cpp  opcodes.cpp  opcodes.h  serv.cpp  serv.h  utils.cpp  utils.h
src/bootstrap/luasubmodules/: init.lua
src/client/: Makefile.am  main.c
src/luasubmodules/: bencdec.lua  gd.lua  gmp.lua  init.lua
